# mypackage

./: LICENSE.txt  README.md  pyproject.toml  tutorial.ipynb
.spyproject/config/backups/: workspace.ini.bak
src/mypackage/: __about__.py  plotting.py  simulations.py
tests/: __init__.py
