[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
version = "0.1"
description = 'This is my first Python package'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Florence Bockting", email = "48919471+florence-bockting@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy == 2.2.3"
]

[project.urls]
Documentation = "https://github.com/Florence Bockting/mypackage#readme"
Issues = "https://github.com/Florence Bockting/mypackage/issues"
Source = "https://github.com/Florence Bockting/mypackage"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mypackage tests}"

[tool.coverage.run]
source_pkgs = ["mypackage", "tests"]
branch = true
parallel = true
omit = [
  "src/mypackage/__about__.py",
]

[tool.coverage.paths]
mypackage = ["src/mypackage", "*/mypackage/src/mypackage"]
tests = ["tests", "*/mypackage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
